--- a/app/src/main/res/layout/layout_moment_detail_header.xml
+++ b/app/src/main/res/layout/layout_moment_detail_header.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:background="@color/white"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -8,6 +9,7 @@
             android:layout_marginLeft="@dimen/px30"
             android:layout_marginRight="@dimen/px30"
             android:layout_marginTop="@dimen/px30"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -57,6 +59,7 @@
             android:layout_marginLeft="@dimen/px30"
             android:layout_marginRight="@dimen/px30"
             android:layout_marginBottom="@dimen/px30"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -72,6 +75,7 @@
             android:text="222条评论"
             android:layout_marginLeft="@dimen/px30"
             android:layout_marginTop="@dimen/px30"
+            android:layout_marginBottom="@dimen/px30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
