--- a/app/src/main/res/layout/layout_classroom_panel.xml
+++ b/app/src/main/res/layout/layout_classroom_panel.xml
@@ -294,7 +294,7 @@
 
     </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
             android:id="@+id/white_board_panel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -302,14 +302,14 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/px10"
             android:visibility="gone"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:background="@drawable/wb_conner_bg">
 
         <ImageView
                 android:id="@+id/select_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_alignParentLeft="true"
                 android:padding="@dimen/px25"
                 android:src="@drawable/wb_selection_selector"/>
 
@@ -317,47 +317,52 @@
                 android:id="@+id/handwriting_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
                 android:src="@drawable/wb_brush_selector"
-                android:layout_toRightOf="@+id/select_btn"
                 android:padding="@dimen/px25"/>
 
         <ImageView
                 android:id="@+id/shape_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_toRightOf="@+id/handwriting_btn"
                 android:padding="@dimen/px25"/>
 
         <ImageView
                 android:id="@+id/eraser_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
                 android:src="@drawable/wb_eraser_selector"
-                android:layout_toRightOf="@+id/shape_btn"
                 android:padding="@dimen/px25"/>
 
         <ImageView
                 android:id="@+id/text_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
                 android:src="@drawable/wb_text_selector"
-                android:layout_toRightOf="@+id/eraser_btn"
                 android:padding="@dimen/px25"/>
 
         <cn.xiaojs.xma.ui.classroom.whiteboard.widget.CircleView
                 android:id="@+id/color_picker_btn"
                 android:layout_width="@dimen/px40"
                 android:layout_height="@dimen/px40"
-                android:layout_centerInParent="true"
-                android:layout_toRightOf="@+id/text_btn"
                 android:layout_marginLeft="@dimen/px25"
                 android:layout_marginRight="@dimen/px25"/>
 
-    </RelativeLayout>
+        <ImageView
+                android:id="@+id/undo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/wb_undo_selector"
+                android:padding="@dimen/px25"/>
+
+        <ImageView
+                android:id="@+id/redo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/wb_redo_selector"
+                android:padding="@dimen/px25"/>
+
+    </LinearLayout>
+
 
 </cn.xiaojs.xma.ui.classroom.MainPanel>
 
