--- a/app/src/main/res/layout/fragment_moment.xml
+++ b/app/src/main/res/layout/fragment_moment.xml
@@ -41,13 +41,12 @@
             android:id="@+id/live_grid"
             android:scrollbars="none"
             android:paddingBottom="@dimen/px100"
-            android:divider="@android:color/transparent"
+            android:divider="@color/white"
             android:listSelector="@android:color/transparent"
             android:horizontalSpacing="0dp"
-            android:verticalSpacing="@dimen/px30"
+            android:verticalSpacing="0dp"
             android:numColumns="2"
             android:clipToPadding="true"
-            android:background="@color/white"
             android:stretchMode="columnWidth"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
