--- a/app/src/main/res/layout/layout_moment_ugc.xml
+++ b/app/src/main/res/layout/layout_moment_ugc.xml
@@ -49,6 +49,7 @@
             android:src="@drawable/ic_lesson_more"
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
+            android:padding="@dimen/px10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 </merge>
