教室，左边弹出课件bug

--- a/app/src/main/res/layout/layout_classroom_course_ware.xml
+++ b/app/src/main/res/layout/layout_classroom_course_ware.xml
@@ -18,7 +18,7 @@
 
     <ListView
             android:id="@+id/course_ware_list"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/px500"
             android:layout_height="match_parent">
 
     </ListView>
