教室，管理联系人列表

--- a/app/src/main/res/layout/layout_classroom_contact_item.xml
+++ b/app/src/main/res/layout/layout_classroom_contact_item.xml
@@ -12,7 +12,9 @@
     <ImageView
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:src="@drawable/multi_check_selector"
+            android:layout_marginRight="@dimen/px15"/>
 
     <cn.xiaojs.xma.ui.widget.RoundedImageView
             android:id="@+id/portrait"
