--- a/app/src/main/res/layout/layout_classroom_contact_msg.xml
+++ b/app/src/main/res/layout/layout_classroom_contact_msg.xml
@@ -5,200 +5,9 @@
         android:layout_height="match_parent"
         android:clickable="true">
 
-    <RelativeLayout
-            android:id="@+id/contact"
-            android:layout_width="@dimen/px400"
-            android:layout_height="match_parent"
-            android:background="@color/classroom_main_gray"
-            android:focusable="true"
-            android:focusableInTouchMode="true">
+    <include layout="@layout/layout_classroom_contact"/>
 
-        <EditText
-                android:id="@+id/search"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/px70"
-                android:textColorHint="@color/font_dark_gray"
-                android:textColor="@color/font_dark_gray"
-                android:hint="搜索"
-                android:textSize="@dimen/font_28px"
-                android:background="#88ffffff"
-                android:layout_margin="@dimen/px15"
-                android:drawableRight="@drawable/ic_search"
-                android:paddingLeft="@dimen/px5"
-                android:paddingRight="@dimen/px5"/>
-
-        <ListView
-                android:id="@+id/contact_book"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/search"
-                android:layout_above="@+id/action_line">
-
-        </ListView>
-
-        <View
-                android:id="@+id/action_line"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/px1"
-                android:background="#333333"
-                android:layout_above="@+id/contact_action_btn"/>
-
-        <LinearLayout
-                android:id="@+id/contact_action_btn"
-                android:paddingTop="@dimen/px16"
-                android:paddingBottom="@dimen/px16"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal">
-
-            <ImageView
-                    android:id="@+id/open_chat"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/cr_chat"/>
-
-            <ImageView
-                    android:id="@+id/add_contact"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/cr_add_contact"/>
-
-            <ImageView
-                    android:id="@+id/manage_contact"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/cr_contact_manage"/>
-        </LinearLayout>
-    </RelativeLayout>
-
-    <LinearLayout
-            android:id="@+id/chat"
-            android:layout_width="@dimen/px560"
-            android:layout_height="match_parent"
-            android:background="@color/classroom_main_gray"
-            android:visibility="gone"
-            android:orientation="horizontal">
-
-        <RelativeLayout
-                android:layout_width="@dimen/px460"
-                android:layout_height="match_parent">
-
-            <LinearLayout
-                    android:id="@+id/chat_tab"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                <LinearLayout
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:gravity="center_vertical"
-                        android:layout_height="@dimen/px80"
-                        android:paddingLeft="@dimen/px10"
-                        android:paddingRight="@dimen/px15"
-                        android:background="@color/classroom_chat_bg">
-
-                    <TextView
-                            android:layout_weight="1"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:text="@string/classroom_discussion"
-                            android:textColor="@color/font_white"
-                            android:textSize="@dimen/font_30px"/>
-
-                    <ToggleButton
-                            android:id="@+id/discussion_switcher"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/toggle_btn_selector"
-                            android:textOff=""
-                            android:textOn=""/>
-                </LinearLayout>
-
-                <LinearLayout
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:gravity="center_vertical"
-                        android:layout_height="@dimen/px80"
-                        android:paddingLeft="@dimen/px10"
-                        android:paddingRight="@dimen/px15">
-
-                    <TextView
-                            android:layout_weight="1"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:text="龚婷"
-                            android:textColor="@color/font_white"
-                            android:textSize="@dimen/font_30px"/>
-
-                    <ImageView
-                            android:id="@+id/del_chat_tab"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_del_label"/>
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-            <ListView
-                    android:id="@+id/chat_msg"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@+id/chat_tab"
-                    android:background="@color/classroom_chat_bg"
-                    android:layout_above="@+id/msg_input_layout">
-
-            </ListView>
-
-            <FrameLayout
-                    android:id="@+id/msg_input_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/classroom_chat_bg"
-                    android:layout_alignParentBottom="true">
-
-                <EditText
-                        android:id="@+id/msg_input"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/px70"
-                        android:background="@drawable/cr_msg_input_bg"
-                        android:padding="@dimen/px5"
-                        android:layout_marginLeft="@dimen/px20"
-                        android:layout_marginRight="@dimen/px20"
-                        android:layout_marginBottom="@dimen/px20"
-                        android:imeOptions="actionSend"/>
-            </FrameLayout>
-
-        </RelativeLayout>
-
-        <LinearLayout
-                android:layout_width="@dimen/px100"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-            <ListView
-                    android:id="@+id/chat_simple_contact"
-                    android:layout_weight="1"
-                    android:layout_marginTop="@dimen/px20"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-
-            <ImageView
-                    android:id="@+id/open_contact"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/px80"
-                    android:layout_gravity="center_horizontal"
-                    android:scaleType="center"
-                    android:src="@drawable/cr_contact_book"/>
-        </LinearLayout>
-
-
-    </LinearLayout>
+    <include layout="@layout/layout_classroom_chat"/>
 
 </FrameLayout>
 
