增加动态详情的评论列表的接口和界面显示

--- a/app/src/main/res/layout/activity_moment_comment.xml
+++ b/app/src/main/res/layout/activity_moment_comment.xml
@@ -33,6 +33,7 @@
                 android:minLines="3"/>
 
         <Button
+                android:id="@+id/moment_comment_send"
                 android:textSize="@dimen/font_28px"
                 android:textColor="@color/font_black"
                 android:minWidth="@dimen/px100"
