--- a/app/src/main/res/layout/layout_moment_comment_item.xml
+++ b/app/src/main/res/layout/layout_moment_comment_item.xml
@@ -65,6 +65,17 @@
     </RelativeLayout>
 
     <TextView
+            android:id="@+id/moment_comment_reply"
+            android:textSize="@dimen/font_30px"
+            android:textColor="@color/common_text"
+            android:layout_marginTop="@dimen/px5"
+            android:layout_marginLeft="@dimen/px160"
+            android:layout_marginRight="@dimen/px30"
+            android:text="2016-12-12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    <TextView
             android:id="@+id/moment_comment_content"
             android:textSize="@dimen/font_30px"
             android:textColor="@color/font_black"
