--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,7 @@
             android:orientation="horizontal">
 
         <RelativeLayout
+                android:id="@+id/home_search_wrapper"
                 android:layout_width="match_parent"
                 android:layout_marginLeft="@dimen/px30"
                 android:layout_marginRight="@dimen/px30"
@@ -31,7 +32,7 @@
                 android:layout_height="wrap_content">
 
             <TextView
-                    android:id="@+id/my_course_search"
+                    android:id="@+id/home_search"
                     android:layout_width="wrap_content"
                     android:drawableLeft="@drawable/ic_search"
                     android:layout_centerInParent="true"
