--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -113,4 +113,11 @@
         <item>取消关注</item>
         <item>举报</item>
     </string-array>
+
+    <string-array name="share_scope">
+        <item>所有人</item>
+        <item>仅好友</item>
+        <item>班级圈</item>
+        <item>部分人</item>
+    </string-array>
 </resources>
